# rooch

./: .cursorrules  .dockerignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  .tool-versions  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING-zh.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  Cargo.toml  Makefile  README.md  SECURITY.md  azure-pipelines.yml  dev  dev.pub  lychee.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  probestack_fix.c  rooch_types.yaml  rust-toolchain  rust-toolchain.toml  temp.json  test_compatibility_example.md
crates/data_verify/: Cargo.toml  README.md
crates/data_verify/src/: brc20_helper.rs  config.rs  data_export.rs  inscription.rs  lib.rs  main.rs  ord_verify.rs  rooch_client.rs
crates/data_verify/tests/testdata/: brc20_deploy.txt  brc20_mint.txt  brc20_transfer.txt  id_txid_inscription_addr_test.json
crates/framework/: Cargo.toml
crates/framework/mos-framework/: Move.toml
crates/framework/mos-framework/sources/: account.move
crates/framework/mos-stdlib/: Move.toml
crates/framework/mos-stdlib/sources/: account.move  any.move  bcd.move  copyable_any.move  hex.move  math.move  table.move  tx_context.move  type_info.move
crates/framework/move-stdlib/: README.md
crates/framework/moveos-stdlib/: Move.toml
crates/framework/moveos-stdlib/sources/: account.move
crates/framework/src/: addresses.rs  lib.rs
crates/framework/src/natives/: mod.rs
crates/framework/tests/: tests.rs
crates/integration-test-runner/: Cargo.toml
crates/integration-test-runner/src/: lib.rs
crates/integration-test-runner/tests/: tests.rs
crates/mos/: Cargo.toml
crates/mos-types/: Cargo.toml
crates/mos-types/src/: lib.rs  object.rs  tx_context.rs
crates/mos/src/: lib.rs  main.rs
crates/rooch-account/: Cargo.toml
crates/rooch-alloc/: Cargo.toml
crates/rooch-alloc/src/: default.rs  error.rs  jemalloc.rs  lib.rs  system.rs
crates/rooch-anomalies/: Cargo.toml  README.md
crates/rooch-anomalies/src/: lib.rs
crates/rooch-anomalies/static/: 527d69c3
crates/rooch-benchmarks/: Cargo.toml  README.md
crates/rooch-benchmarks/benches/: bench_gc.rs  bench_indexer.rs  bench_smt.rs  bench_state_tree.rs  bench_storage.rs  bench_transaction.rs  bench_tx.rs  bench_tx_exec.rs  bench_tx_exec_blk.rs  bench_tx_exec_btc_blk.rs  bench_tx_query.rs  bench_tx_sequence.rs  bench_tx_validate.rs  bench_tx_write.rs  bench_utils.rs  bench_vm.rs
crates/rooch-benchmarks/config/: bench_tx.toml  bench_tx_btc_blk.toml
crates/rooch-benchmarks/src/: block.rs  config.rs  gc.rs  helper.rs  indexer.rs  lib.rs  measurement.rs  smt.rs  storage.rs  transaction.rs  tx.rs  tx_exec.rs
crates/rooch-client/: Cargo.toml
crates/rooch-client/src/: client.rs  client_config.rs  lib.rs  test.rs  wallet_context.rs
crates/rooch-common/: Cargo.toml  README.md
crates/rooch-common/src/: bloom.rs  lib.rs  utils.rs
crates/rooch-config/: Cargo.toml
crates/rooch-config/src/: config.rs  da_config.rs  indexer_config.rs  lib.rs  proposer_config.rs  prune_config.rs  server_config.rs  settings.rs  state_prune.rs  store_config.rs
crates/rooch-da/: Cargo.toml  README.md
crates/rooch-da/docs/: backend.md  stream.md  todo.md
crates/rooch-da/src/: batcher.rs  chunk.rs  client.rs  lib.rs  messages.rs  segment.rs  test.rs
crates/rooch-db/: Cargo.toml
crates/rooch-db/src/: lib.rs  state_pruner.rs
crates/rooch-event/: Cargo.toml
crates/rooch-event/src/: actor.rs  event.rs  lib.rs
crates/rooch-executor/: Cargo.toml
crates/rooch-executor/src/: lib.rs  metrics.rs
crates/rooch-faucet/: Cargo.toml  README.md
crates/rooch-faucet/src/: App.rs  app.rs  discord.rs  errors.rs  faucet.rs  faucet_module.rs  faucet_proxy.rs  invitation_module.rs  lib.rs  main.rs  metrics.rs  metrics_layer.rs  requests.rs  responses.rs  server.rs  tweet_fetcher_module.rs  tweet_v2_module.rs  twitter_account_module.rs  web.rs
crates/rooch-finality/: Cargo.toml  build.rs  build2.rs
crates/rooch-finality/src/: build.rs  lib.rs  messages.rs  metrics.rs  rpc_client.rs
crates/rooch-finality/tests/: test_sequencer.rs
crates/rooch-framework-release/: Cargo.toml  README.md
crates/rooch-framework-release/src/: main.rs
crates/rooch-framework-tests/: Cargo.toml  README.md
crates/rooch-framework-tests/src/: bbn_tx_loader.rs  binding_test.rs  bitcoin_block_tester.rs  lib.rs  main.rs
crates/rooch-framework-tests/tester/: 100000.tester.genesis  781735.tester.genesis  790964.tester.genesis  794970.tester.genesis  832918.tester.genesis  864790.tester.genesis
crates/rooch-framework-tests/tests/: tests.rs
crates/rooch-genesis/: Cargo.toml  README.md  build.rs
crates/rooch-genesis/doc/: string.md  vector.md
crates/rooch-genesis/genesis/: genesis  stdlib
crates/rooch-genesis/released/: main  test
crates/rooch-genesis/src/: lib.rs  main.rs
crates/rooch-indexer/: .env  Cargo.toml  README.md  diesel.toml
crates/rooch-indexer/src/: errors.rs  indexer.rs  indexer_reader.rs  lib.rs  metrics.rs  schema.rs  test_utils.rs  types.rs  utils.rs
crates/rooch-indexer/tests/: integration_tests.rs
crates/rooch-integration-test-runner/: Cargo.toml
crates/rooch-integration-test-runner/src/: lib.rs
crates/rooch-integration-test-runner/tests/: tests.rs
crates/rooch-key/: Cargo.toml
crates/rooch-key/src/: key_derive.rs  keypair.rs  keypair_file.rs  keystore.rs  lib.rs
crates/rooch-notify/: Cargo.toml
crates/rooch-notify/src/: actor.rs  lib.rs  messages.rs  proxy.rs  streamer.rs  subscription_handler.rs  subscription_handler_tests.rs
crates/rooch-open-rpc/: Cargo.toml
crates/rooch-open-rpc-macros/: Cargo.toml
crates/rooch-open-rpc-macros/src/: lib.rs
crates/rooch-open-rpc-spec/: Cargo.toml  build.rs
crates/rooch-open-rpc-spec-builder/: Cargo.toml
crates/rooch-open-rpc-spec-builder/src/: examples.rs  lib.rs
crates/rooch-open-rpc-spec/schemas/: openrpc.json
crates/rooch-open-rpc-spec/src/: main.rs
crates/rooch-open-rpc/spec/: openrpc.json
crates/rooch-open-rpc/src/: examples.rs  generate_json_rpc_spec.rs  lib.rs
(+5968 files in other folders)
