[workspace]
resolver = "2"

members = [
    "moveos/smt",
    "moveos/moveos-types",
    "moveos/moveos-store",
    "moveos/moveos-stdlib",
    "moveos/moveos-stdlib-builder",
    "moveos/moveos",
    "moveos/moveos-commons/moveos-common",
    "moveos/moveos-commons/timeout-join-handler",
    "moveos/moveos-commons/accumulator",
    "moveos/raw-store",
    "moveos/metrics",
    "moveos/moveos-config",
    "crates/rooch-key",
    "crates/rooch-types",
    "crates/rooch-framework",
    "crates/rooch-framework-tests",
    "crates/rooch-genesis",
    "crates/rooch-genesis-builder",
    "crates/rooch-integration-test-runner",
    "crates/rooch-rpc-server",
    "crates/rooch-rpc-client",
    "crates/rooch-rpc-api",
    "crates/rooch",
    "crates/testsuite",
    "crates/rooch-config",
    "crates/rooch-da",
    "crates/rooch-sequencer",
    "crates/rooch-executor",
    "crates/rooch-proposer",
    "crates/rooch-open-rpc",
    "crates/rooch-open-rpc-spec",
    "crates/rooch-open-rpc-spec-builder",
    "crates/rooch-open-rpc-macros",
    "crates/ethereum-open-rpc-macros",
    "crates/rooch-store"
]

default-members = [
    "moveos/moveos",
    "crates/rooch",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Rooch Contributors <opensource@rooch.network>"]
edition = "2021"
homepage = "https://rooch.network"
license = "Apache-2.0"
publish = false
repository = "https://github.com/rooch-network/rooch"
rust-version = "1.70"


[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
# crates for MoveOS
smt = { path = "moveos/smt" }
moveos-types = { path = "moveos/moveos-types" }
moveos-store = { path = "moveos/moveos-store" }
moveos-stdlib = { path = "moveos/moveos-stdlib" }
moveos-stdlib-builder = { path = "moveos/moveos-stdlib-builder" }
moveos = { path = "moveos/moveos" }
moveos-cli = { path = "moveos/moveos-cli" }
moveos-common = { path = "moveos/moveos-commons/moveos-common" }
timeout-join-handler = { path = "moveos/moveos-commons/timeout-join-handler" }
moveos-verifier = { path = "moveos/moveos-verifier" }
raw-store = { path = "moveos/raw-store" }
metrics = { path = "moveos/metrics" }
moveos-config = { path = "moveos/moveos-config" }

# crates for Rooch
rooch = { path = "crates/rooch" }
rooch-key = { path = "crates/rooch-key" }
rooch-types = { path = "crates/rooch-types" }
rooch-framework = { path = "crates/rooch-framework" }
rooch-framework-tests = { path = "crates/rooch-framework-tests" }
rooch-integration-test-runner = { path = "crates/rooch-integration-test-runner" }
rooch-genesis = { path = "crates/rooch-genesis" }
rooch-genesis-builder = { path = "crates/rooch-genesis-builder" }
rooch-rpc-server = { path = "crates/rooch-rpc-server" }
rooch-rpc-client = { path = "crates/rooch-rpc-client" }
rooch-rpc-api = { path = "crates/rooch-rpc-api" }
rooch-testsuite = { path = "crates/testsuite" }
rooch-config = { path = "crates/rooch-config" }
rooch-sequencer = { path = "crates/rooch-sequencer" }
rooch-executor = { path = "crates/rooch-executor" }
rooch-proposer = { path = "crates/rooch-proposer" }
rooch-open-rpc = { path = "crates/rooch-open-rpc" }
rooch-open-rpc-spec = { path = "crates/rooch-open-rpc-spec" }
rooch-open-rpc-spec-builder = { path = "crates/rooch-open-rpc-spec-builder" }
rooch-open-rpc-macros = { path = "crates/rooch-open-rpc-macros" }
ethereum-open-rpc-macros = { path = "crates/ethereum-open-rpc-macros" }
rooch-store = { path = "crates/rooch-store" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
again = "0.1.2"
anyhow = "1.0.62"
async-trait = "0"
backtrace = "0.3"
bcs = "0.1.3"
bytes = "1.0.1"
bech32 = "0.9.1"
better_any = "0.1.1"
bitcoin = "0.30.1"
bip32 = "0.4.0"
byteorder = "1.4.3"
clap = { version = "3.2.17", features = ["derive"] }
chrono = "0.4.23"
coerce = "0.8"
datatest-stable = "0.1.3"
derive_builder = "0.12"
derive_more = "0.99.17"
dirs = "4.0.0"
enum_dispatch = "^0.3"
ethereum-types = "0.14.1"
ethers = { version = "2.0.7", features = ["legacy"] }
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/rooch-network/fastcrypto", rev = "aa5f9f308b6598779820db8b673050c10cfcc3c1" }
futures = "0.3"
hex = "0.4.3"
rustc-hex = "1.0"
rust-embed = "6.8.1"
rocket = { version = "0.5.0-rc.2", default-features = false }
itertools = "0.10.5"
jsonrpsee = { version = "0.16", features = ["full"] }
jpst = "0.1.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
log = "0.4.16"
more-asserts = "0.3.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
parking_lot = "0.12.1"
pathdiff = "0.2.1"
petgraph = "0.5.1"
primitive-types = { version = "0.12.1", features = ["serde", "arbitrary"] }
prost = "0.11"
prost-types = "0.11"
proptest = "1.0.0"
proptest-derive = "0.3.0"
rayon = "1.5.2"
rand = "0.8.5"
rand_core = { version = "0.6.3", default-features = false }
schemars = { version = "0.8.10", features = ["either"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.9"
serde_repr = "0.1"
serde-name = "0.2"
serde_with = { version = "2.1.0", features = ["hex"] }
signature = "1.6.0"
slip10_ed25519 = "0.1.3"
strum = "^0.24"
strum_macros = "^0.24"
sha2 = "0.10.2"
sha3 = "0.9.1"
smallvec = "1.6.1"
thiserror = "1.0.34"
tiny-keccak = { version = "2", features = ["keccak", "sha3"] }
tiny-bip39 = "1.0.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8", features = ["gzip"] }
tracing = "0.1"
tracing-subscriber = "0.3"
codespan-reporting = "0.11.1"
codespan = "0.11.1"
termcolor = "1.1.2"
versions = "4.1.0"
pretty_assertions = "1.2.0"
syn = { version = "1.0.104", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.47"
derive-syn-parse = "0.1.5"
unescape = "0.1.0"
tempfile = "3.2.0"
regex = "1.8.4"
walkdir = "2.3.3"
rocksdb = { version = "0.21.0", features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"], default-features = false }
prometheus = "0.13.3"
coarsetime = "0.1.22"
hyper = { version = "0.14.12", features = ["full"] }
num_enum = "0.5.7"
libc = "^0.2"
nostr = "0.22"
serde-reflection = "0.3.6"
serde-generate = "0.25.1"
rust_secp256k1 = { version = "0.27.0", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
bcs-ext = { path = "moveos/moveos-commons/bcs_ext" }
tower = { version = "0.4.12", features = ["full", "util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.4", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
mirai-annotations = "1.12.0"
lru = "0.11.0"
accumulator = { path = "moveos/moveos-commons/accumulator" }
bitcoin-bech32 = "0.13.0"
bs58 = "0.5.0"
dirs-next = "2.0.0"
anstream = { version = "0.3" }

# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
# BEGIN MOVE DEPENDENCIES
move-abigen = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-binary-format = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-bytecode-verifier = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-bytecode-utils = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-cli = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-command-line-common = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-compiler ={ git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-core-types = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c", features = ["address32"] }
move-coverage = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-disassembler = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-docgen = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-errmapgen = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-ir-compiler = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-model = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-package = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-prover = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-prover-boogie-backend = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-stackless-bytecode = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-prover-test-utils = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-resource-viewer = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-stackless-bytecode-interpreter = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-stdlib = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c", features = ["address32", "testing"] }
move-symbol-pool = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
#move-table-extension = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-transactional-test-runner = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-unit-test = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c", features = ["table-extension"] }
move-vm-runtime = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c", features = ["lazy_natives"] }
move-vm-test-utils = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
read-write-set = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
read-write-set-dynamic = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-bytecode-source-map  = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }
move-ir-types = { git = "https://github.com/rooch-network/move", rev = "e2caf0ac9c788e6e487a9d35d1530254c747650c" }# END MOVE DEPENDENCIES

# keep this for convenient debug Move in local repo
# [patch.'https://github.com/rooch-network/move']
# move-abigen = { path = "../move/language/move-prover/move-abigen" }
# move-binary-format = { path = "../move/language/move-binary-format"  }
# move-bytecode-verifier = { path = "../move/language/move-bytecode-verifier" }
# move-bytecode-utils = { path = "../move/language/tools/move-bytecode-utils" }
# move-cli = { path = "../move/language/tools/move-cli" }
# move-command-line-common = { path = "../move/language/move-command-line-common" }
# move-compiler ={ path = "../move/language/move-compiler" }
# move-core-types = { path = "../move/language/move-core/types", features = ["address32"] }
# move-coverage = { path = "../move/language/tools/move-coverage" }
# move-disassembler = { path = "../move/language/tools/move-disassembler" }
# move-docgen = { path = "../move/language/move-prover/move-docgen" }
# move-errmapgen = { path = "../move/language/move-prover/move-errmapgen" }
# move-ir-compiler = { path = "../move/language/move-ir-compiler" }
# move-model = { path = "../move/language/move-model" }
# move-package = { path = "../move/language/tools/move-package" }
# move-prover = { path = "../move/language/move-prover" }
# move-prover-boogie-backend = { path = "../move/language/move-prover/boogie-backend" }
# move-stackless-bytecode = { path = "../move/language/move-prover/bytecode" }
# move-prover-test-utils = { path = "../move/language/move-prover/test-utils" }
# move-resource-viewer = { path = "../move/language/tools/move-resource-viewer" }
# move-stackless-bytecode-interpreter = { path = "../move/language/move-prover/interpreter" }
# move-stdlib = { path = "../move/language/move-stdlib", features = ["address32", "testing"] }
# move-symbol-pool = { path = "../move/language/move-symbol-pool" }
# #move-table-extension = { path = "../move/language/" }
# move-transactional-test-runner = { path = "../move/language/testing-infra/transactional-test-runner" }
# move-unit-test = { path = "../move/language/tools/move-unit-test", features = ["table-extension"] }
# move-vm-runtime = { path = "../move/language/move-vm/runtime", features = ["lazy_natives"] }
# move-vm-test-utils = { path = "../move/language/move-vm/test-utils", features = ["table-extension"] }
# move-vm-types = { path = "../move/language/move-vm/types" }
# read-write-set = { path = "../move/language/tools/read-write-set" }
# read-write-set-dynamic = { path = "../move/language/read-write-set/dynamic" }
# move-bytecode-source-map  = { path = "../move/language/move-ir-compiler/move-bytecode-source-map" }
# move-ir-types = { path = "../move/language/move-ir/types" }
[profile.release]
debug = false
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = true
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
debug = true
