[workspace]
resolver = "2"

members = [
    "moveos/smt",
    "moveos/moveos-types",
    "moveos/moveos-store",
    "moveos/moveos",
    "moveos/moveos-commons/moveos-common",
    "moveos/moveos-commons/timeout-join-handler",
    "moveos/moveos-commons/accumulator",
    "moveos/raw-store",
    "moveos/metrics",
    "moveos/moveos-config",
    "moveos/moveos-wasm",
    "moveos/moveos-object-runtime",
    "crates/rooch-key",
    "crates/rooch-types",
    "crates/rooch-framework-tests",
    "crates/rooch-genesis",
    "crates/rooch-genesis-builder",
    "crates/rooch-integration-test-runner",
    "crates/rooch-relayer",
    "crates/rooch-rpc-server",
    "crates/rooch-rpc-client",
    "crates/rooch-rpc-api",
    "crates/rooch",
    "crates/testsuite",
    "crates/rooch-config",
    "crates/rooch-da",
    "crates/rooch-sequencer",
    "crates/rooch-executor",
    "crates/rooch-proposer",
    "crates/rooch-pipeline-processor",
    "crates/rooch-open-rpc",
    "crates/rooch-open-rpc-spec",
    "crates/rooch-open-rpc-spec-builder",
    "crates/rooch-open-rpc-macros",
    "crates/rooch-store",
    "crates/rooch-indexer",
    "crates/rooch-benchmarks",
    "crates/rooch-test-transaction-builder",
    "crates/data_verify",
    "frameworks/framework-builder",
    "frameworks/framework-release",
    "frameworks/moveos-stdlib",
    "frameworks/rooch-framework",
    "frameworks/bitcoin-move"
]

default-members = [
    "moveos/moveos",
    "crates/rooch",
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["Rooch Contributors <opensource@rooch.network>"]
edition = "2021"
homepage = "https://rooch.network"
license = "Apache-2.0"
publish = false
repository = "https://github.com/rooch-network/rooch"
rust-version = "1.70"


[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
# crates for MoveOS
smt = { path = "moveos/smt" }
moveos-types = { path = "moveos/moveos-types" }
moveos-store = { path = "moveos/moveos-store" }
moveos = { path = "moveos/moveos" }
moveos-cli = { path = "moveos/moveos-cli" }
moveos-common = { path = "moveos/moveos-commons/moveos-common" }
timeout-join-handler = { path = "moveos/moveos-commons/timeout-join-handler" }
moveos-verifier = { path = "moveos/moveos-verifier" }
raw-store = { path = "moveos/raw-store" }
metrics = { path = "moveos/metrics" }
moveos-config = { path = "moveos/moveos-config" }
moveos-wasm = { path = "moveos/moveos-wasm" }
moveos-object-runtime = { path = "moveos/moveos-object-runtime" }

# crates for Rooch
rooch = { path = "crates/rooch" }
rooch-key = { path = "crates/rooch-key" }
rooch-types = { path = "crates/rooch-types" }
rooch-framework-tests = { path = "crates/rooch-framework-tests" }
rooch-integration-test-runner = { path = "crates/rooch-integration-test-runner" }
rooch-genesis = { path = "crates/rooch-genesis" }
rooch-genesis-builder = { path = "crates/rooch-genesis-builder" }
rooch-relayer = { path = "crates/rooch-relayer" }
rooch-rpc-server = { path = "crates/rooch-rpc-server" }
rooch-rpc-client = { path = "crates/rooch-rpc-client" }
rooch-rpc-api = { path = "crates/rooch-rpc-api" }
rooch-testsuite = { path = "crates/testsuite" }
rooch-config = { path = "crates/rooch-config" }
rooch-sequencer = { path = "crates/rooch-sequencer" }
rooch-executor = { path = "crates/rooch-executor" }
rooch-proposer = { path = "crates/rooch-proposer" }
rooch-pipeline-processor = { path = "crates/rooch-pipeline-processor" }
rooch-open-rpc = { path = "crates/rooch-open-rpc" }
rooch-open-rpc-spec = { path = "crates/rooch-open-rpc-spec" }
rooch-open-rpc-spec-builder = { path = "crates/rooch-open-rpc-spec-builder" }
rooch-open-rpc-macros = { path = "crates/rooch-open-rpc-macros" }
rooch-store = { path = "crates/rooch-store" }
rooch-indexer = { path = "crates/rooch-indexer" }
rooch-da = { path = "crates/rooch-da" }
rooch-benchmarks = { path = "crates/rooch-benchmarks" }
rooch-test-transaction-builder = { path = "crates/rooch-test-transaction-builder" }
data-verify = { path = "crates/data_verify" }

# frameworks
framework-builder = { path = "frameworks/framework-builder" }
framework-release = { path = "frameworks/framework-release" }
moveos-stdlib = { path = "frameworks/moveos-stdlib" }
rooch-framework = { path = "frameworks/rooch-framework" }
bitcoin-move = { path = "frameworks/bitcoin-move" }


# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
again = "0.1.2"
anyhow = "1.0.62"
async-trait = "0"
backtrace = "0.3"
bcs = "0.1.3"
bytes = "1.4.0"
bech32 = "0.9.1"
better_any = "0.1.1"
bitcoin = { version = "0.31.0", features = ["rand-std"] }
bitcoincore-rpc = "0.18.0"
bip32 = "0.4.0"
byteorder = "1.4.3"
clap = { version = "4.4.1", features = ["derive", "env"] }
brotli = "3.4.0"
chrono = "0.4.23"
coerce = "0.8"
datatest-stable = "0.1.3"
derive_builder = "0.12"
derive_more = "0.99.17"
dirs = "4.0.0"
enum_dispatch = "^0.3"
ethereum-types = "0.14.1"
ethers = { version = "2.0.7", features = ["legacy"] }
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/rooch-network/fastcrypto", rev = "643831ec3b67bdd2b5f998c0bec1b7c91823351f" }
futures = "0.3.28"
hex = "0.4.3"
rustc-hex = "1.0"
itertools = "0.10.5"
jsonrpsee = { version = "0.16.3", features = ["full"] }
jpst = "0.1.1"
lazy_static = "1.4.0"
linked-hash-map = "0.5.6"
log = "0.4.16"
more-asserts = "0.3.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
parking_lot = "0.12.1"
pathdiff = "0.2.1"
petgraph = "0.5.1"
primitive-types = { version = "0.12.1", features = ["serde", "arbitrary"] }
prost = "0.11"
prost-types = "0.11"
proptest = "1.0.0"
proptest-derive = "0.3.0"
rayon = "1.5.2"
rand = "0.8.5"
rand_core = { version = "0.6.3", default-features = false }
schemars = { version = "0.8.10", features = ["either"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
#serde_json = { version = "1.0.111", features = ["preserve_order", "arbitrary_precision"] }
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde_yaml = "0.9"
serde_repr = "0.1"
serde-name = "0.2"
serde_with = { version = "2.1.0", features = ["hex"] }
signature = "1.6.0"
slip10_ed25519 = "0.1.3"
strum = "^0.24"
strum_macros = "^0.24"
sha2 = "0.10.2"
sha3 = "0.9.1"
smallvec = "1.6.1"
thiserror = "1.0.34"
tiny-keccak = { version = "2", features = ["keccak", "sha3"] }
tiny-bip39 = "1.0.0"
tokio = { version = "1.28.1", features = ["full"] }
tonic = { version = "0.8", features = ["gzip"] }
tracing = "0.1"
tracing-subscriber = "0.3"
codespan-reporting = "0.11.1"
codespan = "0.11.1"
termcolor = "1.1.2"
versions = "4.1.0"
pretty_assertions = "1.2.0"
syn = { version = "1.0.104", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.47"
derive-syn-parse = "0.1.5"
unescape = "0.1.0"
tempfile = "3.2.0"
regex = "1.8.4"
walkdir = "2.3.3"
rocksdb = { version = "0.22.0", features = ["snappy", "lz4", "zstd", "zlib"], default-features = false }
prometheus = "0.13.3"
coarsetime = "0.1.22"
hyper = { version = "0.14.12", features = ["full"] }
http = "0.2.6"
num_enum = "0.5.7"
libc = "^0.2"
nostr = "0.22"
serde-reflection = "0.3.6"
serde-generate = "0.25.1"
bcs-ext = { path = "moveos/moveos-commons/bcs_ext" }
tower = { version = "0.4.12", features = ["full", "util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.4", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
mirai-annotations = "1.12.0"
lru = "0.11.0"
accumulator = { path = "moveos/moveos-commons/accumulator" }
bs58 = "0.5.0"
dirs-next = "2.0.0"
anstream = { version = "0.3" }
bigdecimal = { version = "0.3.0", features = ["serde"] }
chacha20poly1305 = "0.10.1"
argon2 = "0.5.2"
rpassword = "7.2.0"
fixed-hash = "0.8.0"
uint = "0.9.5"
rlp = "0.5.2"
const-hex = "1.6.2"
cached = "0.43.0"
diesel = { version = "2.1.0", features = [
    "chrono",
    "sqlite",
    "r2d2",
    "serde_json",
    "64-column-tables",
] }
diesel-derive-enum = { version = "2.0.1", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0" }
tap = "1.0.1"
dotenvy = "0.15"
sized-chunks = { version = "0.6" }
dashmap = "5.5.3"
criterion = { version = "0.5.1", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
xxhash-rust = "0.8.8"
base64 = "0.21.3"
#criterion-cpu-time = "0.1.0"
wasmer = "4.2.5"
ciborium = "0.2.1"
pprof = { version = "0.13.0", features = ["flamegraph", "criterion", "cpp", "frame-pointer", "protobuf-codec"] }
celestia-rpc = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "129272e8d926b4c7badf27a26dea915323dd6489" }
celestia-types = { git = "https://github.com/eigerco/celestia-node-rs.git", rev = "129272e8d926b4c7badf27a26dea915323dd6489" }
opendal = "0.44.1"
bitcoincore-rpc-json = "0.18.0"

# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
# BEGIN MOVE DEPENDENCIES
move-abigen = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-binary-format = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-bytecode-verifier = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-bytecode-utils = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-cli = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-command-line-common = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-compiler = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-core-types = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-coverage = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-disassembler = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-docgen = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-errmapgen = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-ir-compiler = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-model = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-package = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-prover = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-prover-boogie-backend = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-stackless-bytecode = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-prover-test-utils = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-resource-viewer = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-stackless-bytecode-interpreter = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-stdlib = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7", features = ["testing"] }
move-symbol-pool = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
#move-table-extension = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-transactional-test-runner = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-unit-test = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7", features = ["table-extension"] }
move-vm-runtime = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7", features = ["stacktrace", "debugging", "testing"] }
move-vm-test-utils = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
read-write-set = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
read-write-set-dynamic = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-bytecode-source-map = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }
move-ir-types = { git = "https://github.com/rooch-network/move", rev = "1b49c6e1f83e257fee7b74e99c56eb8523f007b7" }# END MOVE DEPENDENCIES

# keep this for convenient debug Move in local repo
# [patch.'https://github.com/rooch-network/move']
# move-abigen = { path = "../move/language/move-prover/move-abigen" }
# move-binary-format = { path = "../move/language/move-binary-format"  }
# move-bytecode-verifier = { path = "../move/language/move-bytecode-verifier" }
# move-bytecode-utils = { path = "../move/language/tools/move-bytecode-utils" }
# move-cli = { path = "../move/language/tools/move-cli" }
# move-command-line-common = { path = "../move/language/move-command-line-common" }
# move-compiler ={ path = "../move/language/move-compiler" }
# move-core-types = { path = "../move/language/move-core/types", features = ["address32"] }
# move-coverage = { path = "../move/language/tools/move-coverage" }
# move-disassembler = { path = "../move/language/tools/move-disassembler" }
# move-docgen = { path = "../move/language/move-prover/move-docgen" }
# move-errmapgen = { path = "../move/language/move-prover/move-errmapgen" }
# move-ir-compiler = { path = "../move/language/move-ir-compiler" }
# move-model = { path = "../move/language/move-model" }
# move-package = { path = "../move/language/tools/move-package" }
# move-prover = { path = "../move/language/move-prover" }
# move-prover-boogie-backend = { path = "../move/language/move-prover/boogie-backend" }
# move-stackless-bytecode = { path = "../move/language/move-prover/bytecode" }
# move-prover-test-utils = { path = "../move/language/move-prover/test-utils" }
# move-resource-viewer = { path = "../move/language/tools/move-resource-viewer" }
# move-stackless-bytecode-interpreter = { path = "../move/language/move-prover/interpreter" }
# move-stdlib = { path = "../move/language/move-stdlib", features = ["address32", "testing"] }
# move-symbol-pool = { path = "../move/language/move-symbol-pool" }
# #move-table-extension = { path = "../move/language/" }
# move-transactional-test-runner = { path = "../move/language/testing-infra/transactional-test-runner" }
# move-unit-test = { path = "../move/language/tools/move-unit-test", features = ["table-extension"] }
# move-vm-runtime = { path = "../move/language/move-vm/runtime", features = ["lazy_natives"] }
# move-vm-test-utils = { path = "../move/language/move-vm/test-utils", features = ["table-extension"] }
# move-vm-types = { path = "../move/language/move-vm/types" }
# read-write-set = { path = "../move/language/tools/read-write-set" }
# read-write-set-dynamic = { path = "../move/language/read-write-set/dynamic" }
# move-bytecode-source-map  = { path = "../move/language/move-ir-compiler/move-bytecode-source-map" }
# move-ir-types = { path = "../move/language/move-ir/types" }
[profile.release]
# enable overflow checks won't affect performance much, branch prediction will handle it well
overflow-checks = true
# enable link-time optimization, which can significantly improve perf but donesn't cost much extra in compile time
# thin LTO is enough for us:
# (https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html)
lto = "thin"
codegen-units = 1 # Help to achieve better result with lto

[profile.bench]
inherits = "release"
#debug = true
